--- a/index.html
+++ b/index.html
@@ -1,44 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" href="logosite.png">
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Pokedex</h1>
-    <div class="poke-container" id="poke-container">
-        <div class="pokemon" style="background-color: rgb(222, 253, 224)">
-        <img src="https://pokeres.bastionbot.org/images/pokemon/1.png" alt="">
-        </div>
-        <div class="info">
-            <span class="number">#001</span>
-            <h3 class="name">Bulbasaur</h3>
-            <small class="type">Type: <span>grass</span>  </small>
-        </div>
+    <title>Pokedex Js</title>
+  </head>
+  <body>
+    <h1>Pokedex Js</h1>
+    <div class="poke-container" id="poke-container"></div>
 
-        <div class="pokemon" style="background-color: rgb(222, 253, 224)">
-            <img src="https://pokeres.bastionbot.org/images/pokemon/1.png" alt="">
-            </div>
-            <div class="info">
-                <span class="number">#001</span>
-                <h3 class="name">Bulbasaur</h3>
-                <small class="type">Type: <span>grass</span>  </small>
-            </div>
-
-            <div class="pokemon" style="background-color: rgb(222, 253, 224)">
-                <img src="https://pokeres.bastionbot.org/images/pokemon/1.png" alt="">
-                </div>
-                <div class="info">
-                    <span class="number">#001</span>
-                    <h3 class="name">Bulbasaur</h3>
-                    <small class="type">Type: <span>grass</span>  </small>
-                </div>
-        
-    </div>
+    <!-- Design inspired by this Dribbble shot: https://dribbble.com/shots/5611109--Pokemon -->
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
