--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Pokedex Js</title>
   </head>
   <body>
-    <h1>Pokedex Js</h1>
+    <h1>POKEDEX JAVASCRIPT</h1>
     <div class="poke-container" id="poke-container"></div>
 
     <!-- Design inspired by this Dribbble shot: https://dribbble.com/shots/5611109--Pokemon -->
